<resources>
    <string name="app_name">故梦</string>
    <string name="permission_warn_message">拒绝某些权限可能会使app工作不正常，可以再向您申请一下权限吗？</string>
    <string name="alertdialog_yes">好的</string>
    <string name="alertdialog_no">不了</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="yaoqian_hint0">摇一摇获取今日运势</string>
    <string name="yaoqian_hint1">人生皆逆旅\n凡事皆缘分</string>

    <string name="drawer_user_name">阿离</string>

    <string name="people_design">设计</string>
    <string name="people_zhang">张凌赟</string>
    <string name="people_develop">开发</string>
    <string name="people_lu">卢家熙</string>
    <string name="people_chen">陈序</string>
    <string name="people_liu">刘俊良</string>

    <string name="wu_zan">吾·赞</string>

    <string name="calendar_request_error">网络请求老黄历失败</string>
    <string name="calendar_empty">\　\　</string>
    <string name="nothing_found">似乎没有这个项目</string>
    <string name="comment_hint">撰写我的评论</string>
</resources>
