<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peopleBackground"
    tools:context="io.github.daddytrap.adream.activity.PeopleActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/activity_people_linearlayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/design"
            android:text="@string/people_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PeopleText"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/zhang"
            android:text="@string/people_zhang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/PeopleText"
            app:layout_constraintTop_toBottomOf="@+id/design"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/develop"
            android:text="@string/people_develop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            style="@style/PeopleText"
            app:layout_constraintTop_toBottomOf="@+id/zhang"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/lu"
            android:text="@string/people_lu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/PeopleText"
            app:layout_constraintTop_toBottomOf="@+id/develop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/chen"
            android:text="@string/people_chen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PeopleText"
            app:layout_constraintTop_toBottomOf="@+id/lu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/liu"
            android:text="@string/people_liu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PeopleText"
            app:layout_constraintTop_toBottomOf="@+id/chen"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@mipmap/vase_image"
        app:layout_constraintTop_toBottomOf="@+id/activity_people_linearlayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <android.support.v7.widget.Toolbar
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#00FFFFFF">
        <ImageView
            android:layout_width="@dimen/toolbar_icon_size"
            android:layout_height="@dimen/toolbar_icon_size"
            android:id="@+id/activity_people_back_icon"
            android:src="@drawable/ic_keyboard_arrow_left"/>
    </android.support.v7.widget.Toolbar>
</android.support.constraint.ConstraintLayout>
